# linux-example-btstack-a2dp-source

./: CMakeLists.txt  README.md
app/: a2dp_source.c  main.c
app_bt_config/: wiced_bt_cfg.c
app_bt_utils/: app_bt_utils.c
include/: a2dp_source.h  log.h
